--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL: https://ddevadat.github.io/hugo/
 languageCode: en-us 
 title: Acme Corporation 
 theme: Eclectic 
