--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -27,7 +27,7 @@ jobs:
           # extended: true
 
       - name: Build
-        run: hugo --minify --baseURL=https://ddevadat.github.io/hugo/
+        run: hugo --minify --baseURL=https://ddevadat.github.io/hugo
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
